--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ mit dank an Dr. Peter Dauscher
 	</script>
 </head>
 
-<body class="bg-gray-700 w-full h-full bg-100wh bg-no-repeat">
+<body class="bg-gray-700 w-full h-full font-mono">
 
 	
 		<div 
@@ -66,7 +66,7 @@ mit dank an Dr. Peter Dauscher
 <div 
 x-data="{
 	drows: ['NullaccHighlight', 'IncaccHighlight','DecaccHighlight','NullMcHighlight','HaltButtonHighlight','IncPc0Highlight','IncPcHighlight']}" 
-id="programm" 
+id="program" 
 x-show="!$store.default.showStartScreen"
 x-init
 x-cloak
@@ -88,9 +88,86 @@ x-cloak
 	x-transition.opacity
 	>
 	CONTROL UNIT
-</div>
+	</div>
 	
+	<svg 
+	class="fixed left-[49.2vw] top-[19vh] w-[5vw] fill-current text-blue-500"
+	viewBox="0 0 39 103">
+		<path d="M9.579 25.849h-9.58L19.45 0l19.449 25.849h-9.725v76.636H9.579z"/></svg>
+
+	<svg 
+	class="fixed left-[65.3vw] top-[19vh] w-[5vw] fill-current text-blue-500"
+	viewBox="0 0 39 103">
+		<path d="M9.579 25.849h-9.58L19.45 0l19.449 25.849h-9.725v76.636H9.579z"/></svg>	
 	
+	<svg 
+	class="fixed left-[55vw] top-[36.5vh] w-[9vw] h-[7vh] fill-current text-blue-500"
+	viewBox="0 0 71 39">
+		<path  d="M53.28 9.58V0l17.972 19.45L53.28 38.897v-9.724H0V9.579Z"/></svg>	
+	
+	<svg 
+	class="fixed left-[44.3vw] top-[43vh] w-[5vw] h-[12vh] fill-current text-red-500"
+	viewBox="0 0 26 75">
+		<path   d="M26.414 63.392 13.207 75.416 0 63.392h6.836V0h12.948v63.392Z"/></svg>
+
+	<svg
+	class="fixed left-[14.5vw] top-[80vh] w-[5vw] h-[12vh] fill-current text-green-500"
+	viewBox="0 0 49 72">
+		<path  d="M0 24.321 24.218-.001l24.529 24.322H37.259v47.505H11.281V24.321z"/> </svg>	
+	
+	<svg 
+	class="fixed left-[21.2vw] top-[80.2vh] w-[5vw] h-[12vh] fill-current text-green-500"
+	viewBox="0 0 49 72">
+		<path d="M48.747 47.505 24.529 71.827 0 47.505h11.488V0h25.978v47.505z"/></svg>	
+	
+	<svg 
+	class="fixed left-[3vw] top-[9.6vh] w-[11vw] h-[12vh] fill-current text-blue-500"
+	viewBox="0 0 94 54">
+		<path d="M.132 48.332V6.472H65.52V.309l28.579 27.046L65.52 54.11v-5.779z"/></svg>
+
+	<svg 
+	class="fixed left-[3vw] top-[89.3vh] w-[11vw] h-[12vh] fill-current text-green-500"
+	viewBox="0 0 94 54">
+		<path d="M.132 48.332V6.472H65.52V.309l28.579 27.046L65.52 54.11v-5.779z"/></svg>
+	
+	<svg 
+	class="fixed left-[17vw] top-[15vh] w-[6vw] h-[12vh] fill-current text-blue-500"
+	viewBox="0 0 50 22">
+		<path  d="M14.289.132v8.504H.509l24.27 13.539 24.332-13.54H35.145V.133z"/> </svg>
+
+	<svg 
+	class="fixed left-[88.3vw] top-[61vh] w-[6vw] h-[30vh] fill-current text-green-500"
+	viewBox="0 0 49 189">
+		<path  d="m48.747 165-24.218 24.322L0 165h11.488L11.375 0H37.44l.025 165z"/>  </svg>
+
+	<svg class="fixed left-[79vw] top-[53vh] w-[6vw] h-[38vh] fill-current text-green-500" viewBox="0 0 51 231">
+		<path d="M0 12.132h38.186V0l13.052 24.579-13.052 24.334V36.961H25.367v194.065H0Z" /></svg>
+	
+	<svg class="fixed left-[37.8vw] top-[36vh] w-[6vw] h-[55vh] fill-current text-green-500" viewBox="0 0 54 334">
+		<path d="M0 12.132h41.36V0l13.053 24.579-13.052 24.334V36.961H25.367v297.253H0Z" /></svg>
+	
+	<svg class="fixed left-[71.5vw] top-[47vh] w-[14vw] h-[3vh] fill-current text-gray-500" viewBox="0 0 106 11">
+		<path d="M.399 5.48 15.062.188v3.97h91.012v2.645H15.062v3.704z" /></svg>
+	
+	<svg class="h-screen fixed left-[75.5vw]">
+		<defs>
+			<pattern id="Pattern" width="1" height="15" patternUnits="userSpaceOnUse">
+				<path fill="#778191" fill-rule="evenodd" d="M.132.132H3.46V9.69H.132z" />
+			</pattern>
+		</defs>
+	
+		<rect fill="url(#Pattern)" width="3" height="100%" />
+	</svg>
+	
+	<svg class="h-screen fixed left-[35vw]">
+		<defs>
+			<pattern id="Pattern" width="1" height="15" patternUnits="userSpaceOnUse">
+				<path fill="#778191" fill-rule="evenodd" d="M.132.132H3.46V9.69H.132z" />
+			</pattern>
+		</defs>
+	
+		<rect fill="url(#Pattern)" width="3" height="100%" />
+	</svg>
 	<!-- <template 
 			x-for="row in drows">
 			<div class="dataMovement" :id="row"/>
@@ -112,15 +189,15 @@ x-cloak
 			<div class="flex space-x-2 items-center">
 				<abbr title="One macro step"><img tabindex=0 src="./images/macro_step.svg" onclick="SingleMacroStep()"
 						class="icon blackborder"></img></abbr>
-				<abbr title="Run Programm"><img tabindex=0 src="./images/macro_run.svg" onclick="executeProgramm()"
+				<abbr title="Run Program"><img tabindex=0 src="./images/macro_run.svg" onclick="executeProgram(0)"
 						class="icon blackborder"></img></abbr>
 			
-				<abbr title="Programm execution speed"><input type="range" min="0" max="3000" step="1.0" "
+				<abbr title="Program execution speed"><input type="range" min="0" max="3000" step="1.0" "
 						class="w-[7vw]"
 						x-model="$store.default.executionSpeed"
 						x-on:change.debounce="updateSpeed"
 						></abbr>
-				<abbr title="Pause programm"><img tabindex=0 src="./images/macro_pause.svg" onclick="pauseProgramm()"
+				<abbr title="Pause program"><img tabindex=0 src="./images/macro_pause.svg" onclick="pauseProgram()"
 						class="icon blackborder"></img></abbr>
 				<abbr title="Reset"><img tabindex=0 src="./images/reset.png" onclick="resetComputer()"
 						class="icon blackborder"></img></abbr>
@@ -151,7 +228,7 @@ x-cloak
 			>
 				<abbr title="Record macrocode"><img tabindex=0 src="./images/record_macro.svg" onclick="aufnahme()"
 						class="icon"></img></abbr>
-				<abbr title="Address in micro programm memory of new Macrocode ">
+				<abbr title="Address in micro program memory of new Macrocode ">
 					<input class="w-[5vmin] text-sm px-1" type="number" istep="10" x-model="$store.default.recordNum"
 						min="0" max="200" ></abbr>
 				<abbr title="Name of new macro program">
@@ -190,7 +267,7 @@ x-cloak
 	</div>
 	<div class="flex flex-col   fixed left-[44.7vw] top-[36.5vh]  w-[10vw] h-[6vh] p-1 bg-gray-500 border border-red-800">
 
-		<p class="text-right px-1 pb-1 text-gray-400 font-semibold text-xs">Instruction Register</p>
+		<p class="text-right px-1 pb-1 text-gray-400 font-semibold text-xs">Instruct Register</p>
 		<p id="InstructionalRegister" 
 		class=" text-2xl text-center"
 		x-show="$store.default.showDetailControl">
@@ -202,8 +279,8 @@ x-cloak
 	<div class="flex flex-col fixed left-[64.5vw] top-[36.5vh] w-[10vw] h-[6vh] p-1 bg-gray-500 border border-red-800"
 	x-show="$store.default.showDetailControl"
 	>
-		<p class=" text-right px-1 pb-1 text-gray-400 font-semibold text-xs" >Programm Counter</p>
-		<p class=" text-2xl text-gray-100 text-center" x-text="$store.default.r_programmCounter()" >000</p>
+		<p class=" text-right px-1 pb-1 text-gray-400 font-semibold text-xs" >Program Counter</p>
+		<p class=" text-2xl text-gray-100 text-center" x-text="$store.default.r_programCounter()" >000</p>
 	</div>
 	<div 
 	class="fixed left-[78.8vw] top-[47vh] w-[4vw]  border border-red-800 px-1 rounded"
@@ -334,9 +411,9 @@ x-init="$el.scrollTop=0">
 
 
 
-<div id="RamEingabe"
+<div 
 x-ref="ramInput"
-class="flex items-center fixed left-[0.5vw] top-[45vh] w-[8vw] h-[18vh] bg-100%"
+class="flex items-center fixed left-[0.5vw] top-[45vh] w-[8vw] h-[18vh] bg-[url('/images/raminput.svg')]"
 :style="{top: $store.default.ramInputTop}"
 x-init
 >
@@ -344,7 +421,6 @@ x-init
   	<div class="flex flex-col space-y-1 ml-2 w-[5vw] text-sm">
 
 		  <input type="Number" 
-		  id="RamInput" 
 		  step=0.001 
 		  @keydown.enter="ManuellRam"
 		  x-model="$store.default.ramInput"
@@ -361,7 +437,6 @@ x-init
 		  </select>
 		  <button 
 		  onclick="ManuellRam()" 
-		  id="RamInputButton"
 		 class="btn" 
 		  >write</button>
 		  
@@ -371,7 +446,7 @@ x-init
 
 
 <!-- The Modal -->
-<div id="myModal" 
+<div  
 	class=" overflow-auto bg-gray-500 bg-opacity-[85%]" 
 	x-show="$store.default.showModal"
 	:class="{ 'absolute inset-0 z-50 flex items-center justify-center': $store.default.showModal }""
@@ -390,9 +465,9 @@ x-init
 		<p>Johnny can also be installed as an app. Click<a
 				href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps/Developer_guide/Installing#the_install_user_experience"
 				target="_blank"> here</a> to learn how to install Johnny on your device</p>
-		<p>This programm is licenced under the GNU Affero General Public License. You can find the sourcecode at <a
+		<p>This program is licenced under the GNU Affero General Public License. You can find the sourcecode at <a
 				href="https://github.com/laubersheini/johnny">https://github.com/laubersheini/johnny</a></p>
-		<p>Feel free to report any bugs on the programms <a href="https://github.com/laubersheini/johnny/issues">Github
+		<p>Feel free to report any bugs on the programs <a href="https://github.com/laubersheini/johnny/issues">Github
 				page</a></p>
 	</div>
 
