--- a/index.html
+++ b/index.html
@@ -79,37 +79,37 @@ x-cloak
 	
 	<svg 
 	class="fixed left-[49.2vw] top-[19vh] w-[5vw] fill-current text-blue-500"
-	:class="$store.default.mcOpHighlight==4 && 'text-blue-700'"
+	:class="$store.default.mcOpHighlight[4] && 'text-blue-700'"
 	viewBox="0 0 39 103">
 		<path d="M9.579 25.849h-9.58L19.45 0l19.449 25.849h-9.725v76.636H9.579z"/></svg>
 
 	<svg 
 	class="fixed left-[65.3vw] top-[19vh] w-[5vw] fill-current text-blue-500"
-	:class="$store.default.mcOpHighlight==8 && 'text-blue-700'"
+	:class="$store.default.mcOpHighlight[8] && 'text-blue-700'"
 	viewBox="0 0 39 103">
 		<path d="M9.579 25.849h-9.58L19.45 0l19.449 25.849h-9.725v76.636H9.579z"/></svg>	
 	
 	<svg 
 	class="fixed left-[55vw] top-[36.5vh] w-[9vw] h-[7vh] fill-current text-blue-500"
-	:class="$store.default.mcOpHighlight==11 && 'text-blue-700'"
+	:class="$store.default.mcOpHighlight[11] && 'text-blue-700'"
 	viewBox="0 0 71 39">
 		<path  d="M53.28 9.58V0l17.972 19.45L53.28 38.897v-9.724H0V9.579Z"/></svg>	
 	
 	<svg 
 	class="fixed left-[44.3vw] top-[43vh] w-[5vw] h-[12vh] fill-current text-red-500"
-	:class="$store.default.mcOpHighlight==5 && 'text-red-700'"
+	:class="$store.default.mcOpHighlight[5] && 'text-red-700'"
 	viewBox="0 0 26 75">
 		<path   d="M26.414 63.392 13.207 75.416 0 63.392h6.836V0h12.948v63.392Z"/></svg>
 
 	<svg
 	class="fixed left-[14.5vw] top-[80vh] w-[5vw] h-[12vh] fill-current text-green-500"
-	:class="$store.default.mcOpHighlight==1 && 'text-green-700'"
+	:class="$store.default.mcOpHighlight[1] && 'text-green-700'"
 	viewBox="0 0 49 72">
 		<path  d="M0 24.321 24.218-.001l24.529 24.322H37.259v47.505H11.281V24.321z"/> </svg>	
 	
 	<svg 
 	class="fixed left-[21.2vw] top-[80.2vh] w-[5vw] h-[12vh] fill-current text-green-500"
-	:class="$store.default.mcOpHighlight==2 && 'text-green-700'"
+	:class="$store.default.mcOpHighlight[2] && 'text-green-700'"
 	viewBox="0 0 49 72">
 		<path d="M48.747 47.505 24.529 71.827 0 47.505h11.488V0h25.978v47.505z"/></svg>	
 	
@@ -130,17 +130,17 @@ x-cloak
 
 	<svg 
 	class="fixed left-[88.3vw] top-[61vh] w-[6vw] h-[30vh] fill-current text-green-500"
-	:class="$store.default.mcOpHighlight==15 && 'text-green-700'"
+	:class="$store.default.mcOpHighlight[15] && 'text-green-700'"
 	viewBox="0 0 49 189">
 		<path  d="m48.747 165-24.218 24.322L0 165h11.488L11.375 0H37.44l.025 165z"/>  </svg>
 
 	<svg class="fixed left-[79vw] top-[53vh] w-[6vw] h-[38vh] fill-current text-green-500" 
-	:class="$store.default.mcOpHighlight==18 && 'text-green-700'"
+	:class="$store.default.mcOpHighlight[18] && 'text-green-700'"
 	viewBox="0 0 51 231">
 		<path d="M0 12.132h38.186V0l13.052 24.579-13.052 24.334V36.961H25.367v194.065H0Z" /></svg>
 	
 	<svg class="fixed left-[37.8vw] top-[36vh] w-[6vw] h-[55vh] fill-current text-green-500" 
-	:class="$store.default.mcOpHighlight==3 && 'text-green-700'"
+	:class="$store.default.mcOpHighlight[3] && 'text-green-700'"
 	viewBox="0 0 54 334">
 		<path d="M0 12.132h41.36V0l13.053 24.579-13.052 24.334V36.961H25.367v297.253H0Z" /></svg>
 	
