fix: image path not loading

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ x-init="$el.scrollTop=0">
 
 <div 
 x-ref="ramInput"
-class="flex items-center fixed left-[0.5vw] top-[45vh] w-[8vw] h-[18vh] bg-[url('/images/ram_input.svg')]"
+class="flex items-center fixed left-[0.5vw] top-[45vh] w-[8vw] h-[18vh] bg-[url('images/ram_input.svg')]"
 :style="{top: $store.default.ramInputTop}"
 x-init
 >
