fix: link focus plugin before core

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ mit dank an Dr. Peter Dauscher
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link rel="manifest" href="./johnny.webmanifest">
 	<link rel="apple-touch-icon" sizes="256x256" href="./icons/firefox/firefox-general-256-256.png">
-	<title>Johnny 2.0</title>	
-	<script src="//unpkg.com/alpinejs" defer></script>
-	<script defer src="https://unpkg.com/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
+	<title>Johnny 2.0</title>
+	<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>	
 	<script src="//cdn.jsdelivr.net/npm/ramda@0.27.1/dist/ramda.min.js"></script>
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.css'>
 	<script  src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js'></script>
