fix: raminput goto nextline

--- a/index.html
+++ b/index.html
@@ -425,8 +425,7 @@ mit dank an Dr. Peter Dauscher
 		
 		<div class="flex flex-col space-y-1 ml-2 w-[5vw] text-sm">
 
-			<input type="Number" 
-			step=0.001 
+			<input type="text" 
 			@keydown.enter="ManuellRam"
 			x-model="$store.default.ramInput"
 			class="border border-gray-400 border-solid" 
